beranda guru udah mau jadi wkwk

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">StudentHack-wanamore</string>
+    <string name="title_activity_beranda_guru">BerandaGuruActivity</string>
 </resources>
