--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,26 @@
         completions."
     </string>
     <string name="title_activity_masuk_kelas">MasukKelasActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_welcome">Home Screen</string>
+    <string name="next">NEXT</string>
+    <string name="skip">SKIP</string>
+    <string name="start">GOT IT</string>
+
+    <string name="slide_1_title">Hello Student!</string>
+    <string name="slide_1_desc">Membuat Hubungan antara guru-murid-orang tua lebih mudah!</string>
+
+    <string name="slide_2_title">Change Book!</string>
+    <string name="slide_2_desc">Mengubah bentuk buku dari kertas menjadi foto!</string>
+
+    <string name="slide_3_title">Great Heart!</string>
+    <string name="slide_3_desc">Care with App and Heart!</string>
+
+    <string name="slide_4_title">World Travel</string>
+    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
+
+    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
+    <string name="play_again">Play Again</string>
 </resources>
